--- a/index.html
+++ b/index.html
@@ -20,3 +20,18 @@
         </ul>
         <button class="nav-btn">Get Early Access</button>
     </nav>
+<!-- Banner -->
+    <section class="banner">
+        <div class="banner-content">
+            <div class="early">
+                <h3><img src="assets/Group 5.png" alt="">  Early Access Now Open</h3>
+            </div>
+            <br>
+            <h1 class="inter-style">Structured thinking,<br> <span style="color: #30B868;">not just note-taking.</span></h1>
+            <p class="inter-style">A private space to store notes, links, and learning summaries — designed to <br> help you think clearly, connect ideas, and turn learning into long-term knowledge.</p>
+            <div class="banner-buttons">
+                <button class="btn-primary">Start Building Your Vault <img src="assets/ArrowRight.png" alt=""></button>
+                <button class="btn-secondary">See How It Works</button>
+            </div>
+        </div>
+    </section>
