added early access section

--- a/index.html
+++ b/index.html
@@ -35,3 +35,44 @@
             </div>
         </div>
     </section>
+
+    <!-- Notes Section -->
+    <section class="notes-section" class="inter-style">
+        <div class="section-header">
+            <h2 class="inter-style">Notes don't fail, Structure does.</h2>
+            <p class="inter-style">You're not bad at learning. Your tools just weren't built for how knowledge actually works.</p>
+        </div>
+        <div class="cards-container">
+            <div class="card">
+                <div class="card-icon"><img src="assets/Vector.png" alt=""></div>
+                <h3 class="inter-style">Scattered notes</h3>
+                <p class="inter-style">Your ideas live in 10 different apps, none of them connected.</p>
+            </div>
+            <div class="card">
+                <div class="card-icon"><img src="assets/Bookmarks.png" alt=""></div>
+                <h3 class="inter-style">Bookmark Overload</h3>
+                <p class="inter-style">Hundreds of saved links you'll never revisit or remember.</p>
+            </div>
+            <div class="card">
+                <div class="card-icon"><img src="assets/Brain.png" alt=""></div>
+                <h3 class="inter-style">No Idea Connections</h3>
+                <p class="inter-style">Insights stay isolated, never building into bigger understanding.</p>
+            </div>
+            <div class="card">
+                <div class="card-icon"><img src="assets/Info.png" alt=""></div>
+                <h3 class="inter-style">Forgetting What You Learned</h3>
+                <p class="inter-style">Knowledge fades because there's no system to retain it.</p>
+            </div>
+        </div>
+    </section>
+
+        <!-- Early Access Section -->
+    <section class="early-access" >
+        <h2 >Ready to think more clearly?</h2>
+        <p >Join thousands of learners who are building their personal knowledge vaults.</p>
+        <p class="message" >Start free, no credit card required.</p>
+        <button class="cta-button">Get Early Access</button>
+        <div class="ending-messages">
+            <p >Free during early access • No credit card needed</p>
+        </div>
+    </section>
