--- a/index.html
+++ b/index.html
@@ -76,3 +76,22 @@
             <p >Free during early access • No credit card needed</p>
         </div>
     </section>
+    <!-- Footer -->
+    <footer>
+        <div class="footer-content">
+            <div class="footer-logo"><img src="assets/logo-footer.png" alt=""></div>
+            <div class="social-links">
+                <p>Social links</p>
+                <br>
+                <div class="now">
+                <a href=""><img src="assets/fi_5969020.png" alt=""></a>
+                <a href=""><img src="assets/Frame 1171277689.png" alt=""></a>
+                <a href=""><img src="assets/Frame 1171277690.png" alt=""></a>
+                </div>
+            </div>
+        </div>
+        <div class="footer-divider"></div>
+        <p class="copyright">© 2026 Personal Knowledge Vault. All rights reserved.</p>
+    </footer>
+</body>
+</html>
