./ given to the images

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Knowledge Vault - Structured Thinking</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
@@ -24,13 +24,13 @@
     <section class="banner">
         <div class="banner-content">
             <div class="early">
-                <h3><img src="assets/Group 5.png" alt="">  Early Access Now Open</h3>
+                <h3><img src="./assets/Group 5.png" alt="">  Early Access Now Open</h3>
             </div>
             <br>
             <h1 class="inter-style">Structured thinking,<br> <span style="color: #30B868;">not just note-taking.</span></h1>
             <p class="inter-style">A private space to store notes, links, and learning summaries — designed to <br> help you think clearly, connect ideas, and turn learning into long-term knowledge.</p>
             <div class="banner-buttons">
-                <button class="btn-primary">Start Building Your Vault <img src="assets/ArrowRight.png" alt=""></button>
+                <button class="btn-primary">Start Building Your Vault <img src="./assets/ArrowRight.png" alt=""></button>
                 <button class="btn-secondary">See How It Works</button>
             </div>
         </div>
@@ -44,22 +44,22 @@
         </div>
         <div class="cards-container">
             <div class="card">
-                <div class="card-icon"><img src="assets/Vector.png" alt=""></div>
+                <div class="card-icon"><img src="./assets/Vector.png" alt=""></div>
                 <h3 class="inter-style">Scattered notes</h3>
                 <p class="inter-style">Your ideas live in 10 different apps, none of them connected.</p>
             </div>
             <div class="card">
-                <div class="card-icon"><img src="assets/Bookmarks.png" alt=""></div>
+                <div class="card-icon"><img src="./assets/Bookmarks.png" alt=""></div>
                 <h3 class="inter-style">Bookmark Overload</h3>
                 <p class="inter-style">Hundreds of saved links you'll never revisit or remember.</p>
             </div>
             <div class="card">
-                <div class="card-icon"><img src="assets/Brain.png" alt=""></div>
+                <div class="card-icon"><img src="./assets/Brain.png" alt=""></div>
                 <h3 class="inter-style">No Idea Connections</h3>
                 <p class="inter-style">Insights stay isolated, never building into bigger understanding.</p>
             </div>
             <div class="card">
-                <div class="card-icon"><img src="assets/Info.png" alt=""></div>
+                <div class="card-icon"><img src="./assets/Info.png" alt=""></div>
                 <h3 class="inter-style">Forgetting What You Learned</h3>
                 <p class="inter-style">Knowledge fades because there's no system to retain it.</p>
             </div>
@@ -79,14 +79,14 @@
     <!-- Footer -->
     <footer>
         <div class="footer-content">
-            <div class="footer-logo"><img src="assets/logo-footer.png" alt=""></div>
+            <div class="footer-logo"><img src="./assets/logo-footer.png" alt=""></div>
             <div class="social-links">
                 <p>Social links</p>
                 <br>
                 <div class="now">
-                <a href=""><img src="assets/fi_5969020.png" alt=""></a>
-                <a href=""><img src="assets/Frame 1171277689.png" alt=""></a>
-                <a href=""><img src="assets/Frame 1171277690.png" alt=""></a>
+                <a href=""><img src="./assets/fi_5969020.png" alt=""></a>
+                <a href=""><img src="./assets/Frame 1171277689.png" alt=""></a>
+                <a href=""><img src="./assets/Frame 1171277690.png" alt=""></a>
                 </div>
             </div>
         </div>
